--- a/index.html
+++ b/index.html
@@ -63,15 +63,19 @@
       <div class="countdown" id="countdown"></div>
   </section>
   
-  <section id="gallery" class="section">
-      <h2>Gallery</h2>
-      <div class="gallery">
-          <img src="images/scene5.jpg" alt="Scenic View" onclick="openLightbox(this.src)">
-          <img src="images/scene9.jpg" alt="Party Night" onclick="openLightbox(this.src)">
-          <img src="images/scene7.jpg" alt="Lake View" onclick="openLightbox(this.src)">
-          <img src="images/scene1.jpg" alt="Lake View" onclick="openLightbox(this.src)">
-      </div>
+  <section id="gallery" class="section bg-white py-12">
+    <h2 class="text-4xl text-gray-800 mb-6 text-center font-bold">Gallery</h2>
+  
+    <div class="gallery-scroll-container">
+      <img src="images/scene5.jpg" alt="Scenic View" class="gallery-image" onclick="openLightbox(this.src)">
+      <img src="images/scene9.jpg" alt="Party Night" class="gallery-image" onclick="openLightbox(this.src)">
+      <img src="images/scene7.jpg" alt="Lake View" class="gallery-image" onclick="openLightbox(this.src)">
+      <img src="images/scene6.jpg" alt="Scenic View" class="gallery-image" onclick="openLightbox(this.src)">
+      <img src="images/scene8.jpg" alt="Party Night" class="gallery-image" onclick="openLightbox(this.src)">
+      <img src="images/scene3.jpg" alt="Lake View" class="gallery-image" onclick="openLightbox(this.src)">
+    </div>
   </section>
+  
   
   <div class="lightbox" id="lightbox" onclick="closeLightbox()">
       <img id="lightbox-img" src="">
