--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <Section>
       <div>
-        <h2 id="text"><span>It's time for a new</span><br>Adventure</h2>
+        <h2 id="text"><span>It's time for lakeside magic </span><br>@Vilakkumaram Leisure</h2>
         
         <img src="https://user-images.githubusercontent.com/65358991/170092504-132fa547-5ced-40e5-ab64-ded61518fac2.png" id="bird1">
         <img src="https://user-images.githubusercontent.com/65358991/170092542-9747edcc-fb51-4e21-aaf5-a61119393618.png" id="bird2">
