--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div> -->
     
     <ul class="hidden md:flex space-x-6 font-medium">
-      <li><a href="#home">HOMEe</a></li>
+      <li><a href="#home">Home</a></li>
       <li><a href="#about">About Us</a></li>
       <li><a href="#events">Events</a></li>
       <li><a href="#gallery">Gallery</a></li>
