--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <img src="images/vilakkumara-logo.jpg" alt="Logo" class="w-10 h-10 rounded-circle me-2">
       <span class="fw-bold">Vilakkumaram Leisure</span>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
     <!-- <div class="md:hidden cursor-pointer text-2xl" onclick="document.querySelector('header ul').classList.toggle('hidden')">
       ☰
     </div> -->
